# invoice_chatbot

./: README.md
backend/: indexing.py  models.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: mobile-header.tsx  sidebar.tsx
frontend/components/chat/: chat-page.tsx  message-bubble.tsx
frontend/components/invoices/: invoices-page.tsx  invoices-table.tsx  upload-section.tsx
frontend/hooks/: use-pdf-files.ts
frontend/lib/: config.ts  format.ts
